--- a/Pawar/index.html
+++ b/Pawar/index.html
@@ -357,7 +357,7 @@
       
         <!-- Embedded Map -->
         <div class="map-box">
-          <iframe src="https://share.google/IDPuKonpScu1koJaT" 
+         <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d7006.084186709663!2d77.216721!3d28.598514!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1754044117477!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>" 
           allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </section>
