cta image update

--- a/Pawar/index.html
+++ b/Pawar/index.html
@@ -84,7 +84,7 @@
                 </div>
             </div>
             <div class="cta-image">
-                <img src="images/ss.jpeg" height="100%" alt="Legal Consultation" />
+                <img src="images/ss.jpeg"  alt="Legal Consultation" />
             </div>
         </div>
     </section>
