--- a/Pawar/index.html
+++ b/Pawar/index.html
@@ -83,7 +83,7 @@
                     <a href="https://wa.me/+919421861640" class="btn btn-cta-secondary">Schedule Consultation</a>
                 </div>
             </div>
-            <div class="cta-image">
+            <div class="cta-image" style="height:110px">
                 <img src="images/ss.jpeg"  alt="Legal Consultation" />
             </div>
         </div>
