--- a/Pawar/index.html
+++ b/Pawar/index.html
@@ -83,8 +83,8 @@
                     <a href="https://wa.me/+919421861640" class="btn btn-cta-secondary">Schedule Consultation</a>
                 </div>
             </div>
-            <div class="cta-image" style="height:110px">
-                <img src="images/ss.jpeg"  alt="Legal Consultation" />
+            <div class="cta-image">
+                <img src="images/ss.jpeg" height="110%"  alt="Legal Consultation" />
             </div>
         </div>
     </section>
