--- a/Pawar/index.html
+++ b/Pawar/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adv Parmeshwar D Pawar-Best Divorce Lawyer in Pune</title>
+    <title>Adv Parmeshwar D. Pawar-Best Divorce Lawyer in Pune</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 
@@ -15,7 +15,7 @@
     <!-- Navigation -->
     <nav class="navbar" id="navbar">
         <div class="nav-container">
-            <a href="/" class="logo">Adv Parmeshwar D Pawar</a>
+            <a href="/" class="logo">Adv Parmeshwar D. Pawar</a>
             <ul class="nav-menu" id="nav-menu">
                 <li><a href="#home" class="nav-link">Home</a></li>
                 <li><a href="#about" class="nav-link">About</a></li>
@@ -226,7 +226,7 @@
             <div class="about-content">
                 <div class="about-text">
                     <div class="about-header">
-                        <h2 class="about-title">Adv Parmeshwar D Pawar
+                        <h2 class="about-title">Adv Parmeshwar D. Pawar
                         </h2>
                         <p class="about-subtitle">Dedicated Legal Advocate with 15+ Years of Experience</p>
                     </div>
@@ -679,7 +679,7 @@
 <body>
 
   <footer class="footer">
-    <div class="footer-logo">Adv Parmeshwar
+    <div class="footer-logo">Adv Parmeshwar D. Pawar
     </div>
 
     <ul class="footer-nav">
@@ -697,7 +697,7 @@
     </div>
 
     <div class="footer-bottom">
-      © 2025 Adv Parmeshwar D Pawar . All rights reserved.
+      © 2025 Adv Parmeshwar D. Pawar. All rights reserved
     </div>
   </footer>
 
