--- a/Pawar/index.html
+++ b/Pawar/index.html
@@ -337,8 +337,7 @@
       
         <!-- Embedded Map -->
         <div class="map-box">
-         <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d7006.084186709663!2d77.216721!3d28.598514!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1754044117477!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>" 
-          allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+       <iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d121059.4560628448!2d73.78482656580248!3d18.524020950080683!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x3bc2c159a6961e81%3A0x9bbe6847b396d6ec!2sAdv%20P.%20D.%20Pawar%2C%20Office%20No.407%2C%20Amit%20Court%2C%20Behind%20Mangla%20theatre%2C%20Shivajinagar%2C%20Pune%2C%20Maharashtra%20411005%2C%20%E0%A4%AD%E0%A4%BE%E0%A4%B0%E0%A4%A4!3m2!1d18.5240388!2d73.8672283!5e0!3m2!1sen!2sin!4v1754046064579!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </section>
       
