--- a/Pawar/index.html
+++ b/Pawar/index.html
@@ -94,7 +94,8 @@
         <div class="services-container">
             <div class="services-header">
                 <h2 class="services-title">Legal Services</h2>
-                <p class="services-subtitle">Comprehensive legal solutions tailored to your needs</p>
+                <p class="services-subtitle">Advocate Parmeshwar D. Pawar is an expert in family law, offering expert guidance and support for all aspects of divorce proceedings. He gives the certainty or possibility of success about your case in the initial stage.
+</p>
             </div>
             
             <div class="services-wrapper">
@@ -103,7 +104,7 @@
                         <div class="service-icon">⚖️</div>
                         <h3 class="service-title">Divorce Filing & Consultation</h3>
                         <p class="service-description">
-                            Expert defense for criminal charges including DUI, assault, theft, and white-collar crimes. 
+                            Expert defence for criminal charges, including DUI, assault, theft, and white-collar crimes. 
                             Protecting your rights with aggressive representation.
                         </p>
                         <ul class="service-features">
