--- a/Pawar/index.html
+++ b/Pawar/index.html
@@ -13,6 +13,15 @@
 </head>
 <body>
     <!-- Navigation -->
+     <div class="overlay" id="entryPopup">
+    <div class="popup">
+      <h2>Do you want to enter the website?</h2>
+      <div class="popup-buttons">
+        <button class="btn-yes" onclick="enterWebsite()">Yes</button>
+        <button class="btn-no" onclick="exitWebsite()">No</button>
+      </div>
+    </div>
+  </div>
     <nav class="navbar" id="navbar">
         <div class="nav-container">
             <a href="/" class="logo">Adv Parmeshwar D. Pawar</a>
@@ -701,9 +710,16 @@
     </div>
   </footer>
 
-</body>
-</html>
+  <script>
+    function enterWebsite() {
+      document.getElementById('entryPopup').style.display = 'none';
+      document.getElementById('main-content').style.display = 'block';
+    }
 
+    function exitWebsite() {
+      window.location.href = "https://www.google.com"; // change this if needed
+    }
+  </script>
 </body>
 </html>
 
