--- a/Pawar/index.html
+++ b/Pawar/index.html
@@ -15,7 +15,7 @@
     <!-- Navigation -->
      <div class="overlay" id="entryPopup">
     <div class="popup">
-      <h2>Do you want to enter the website?</h2>
+      <h2>By entering this website, I/We acknowledge that the content is for informational and educational purposes only. It does not constitute legal advice, solicitation, or create a lawyer-client relationship. The website’s content cannot be used as reference in court. I/We have read, understood, and accepted this disclaimer.</h2>
       <div class="popup-buttons">
         <button class="btn-yes" onclick="enterWebsite()">Yes</button>
         <button class="btn-no" onclick="exitWebsite()">No</button>
