--- a/Pawar/index.html
+++ b/Pawar/index.html
@@ -17,7 +17,10 @@
     <div class="popup">
         <h2>Disclaimer</h2>
         <br>
-      <h2>By entering this website, I/We acknowledge that the content is for informational and educational purposes only. It does not constitute legal advice, solicitation, or create a lawyer-client relationship. The website’s content cannot be used as reference in court. I/We have read, understood, and accepted this disclaimer.</h2>
+      <p>I/We hereby completely accept that, the information provided on this website is intended solely for informational, knowledge and educational purposes. I/We further accepts that, the creators or owners of the website are not constituting or has no intention to constitute any kind of marketing, solicitation, inducement, advertisement or invitation, which will constitute any kind of Lawyer-Client relationship. I/We further accept that, I/We cannot use any contents of the website for reference before any Court. I/We read and understood the abovementioned disclaimer completely and acknowledge, undertake, accept the contents of the above disclaimer before entering into website.
+
+
+</p>
       <div class="popup-buttons">
         <button class="btn-yes" onclick="enterWebsite()">Yes</button>
         <button class="btn-no" onclick="exitWebsite()">No</button>
