--- a/Pawar/index.html
+++ b/Pawar/index.html
@@ -126,15 +126,15 @@
                             <li>Contested divorce proceedings</li>
                             <li>NRI divorce services</li>
                         </ul>
-                        <a href="https://wa.me/7387997500" class="service-btn">Chat Now</a>
+                        <a href="https://wa.me/919421861640" class="service-btn">Chat Now</a>
                     </div>
 
                     <div class="service-card">
                         <div class="service-icon">🏢</div>
-                        <h3 class="service-title">Child Custody & Visitation Rights</h3>
+                        <h3 class="service-title">Child Custody and Visitation Rights</h3>
                         <p class="service-description">
-                            Complete business legal services from startup formation to complex mergers and acquisitions. 
-                            Helping businesses navigate legal complexities.
+                           Complete legal services for child custody issues, from sending a legal notice to drafting and filing a custody petition in family court. 
+
                         </p>
                         <ul class="service-features">
                             <li>Child custody litigation</li>
@@ -147,10 +147,9 @@
 
                     <div class="service-card">
                         <div class="service-icon">🏠</div>
-                        <h3 class="service-title">Maintenance & Alimony</h3>
+                        <h3 class="service-title">Maintenance and Alimony </h3>
                         <p class="service-description">
-                            Comprehensive real estate legal services including property transactions, disputes, and 
-                            commercial real estate matters.
+                            Comprehensive legal services for claiming maintenance, spouse support and child support from the spouse, including sending legal notice and court representation and arguments..
                         </p>
                         <ul class="service-features">
                             <li>Maintenance under Section 125 CrPC                            </li>
@@ -183,10 +182,9 @@
 
                     <div class="service-card">
                         <div class="service-icon">📋</div>
-                        <h3 class="service-title">Mutual divorce instead</h3>
+                        <h3 class="service-title">Divorce Filing & Consultation</h3>
                         <p class="service-description">
-                            Quick, respectful separation by mutual agreement, ensuring dignity and minimal conflict.
-
+Expert in matrimonial cases and highly experienced in consultations and the required steps in the resolution of matrimonial issues.
 
                         </p>
                         <ul class="service-features">
@@ -275,10 +273,10 @@
                     <div class="about-achievements">
                         <h3>Professional Achievements</h3>
                         <ul class="achievement-list">
-                            <li>Member of Bar council of Maharashtra and Goa </li>
+                            <li>Member of Bar Council of Maharashtra and Goa </li>
                             <li>Member of Bar council of India   </li>
                             <li>Member of Pune Bar Association</li>
-                            <li>Member of Pune Family court Lawyers Association</li>
+                            <li>Member of Pune Family Court Lawyers Association</li>
                          
                         </ul>
                     </div>
@@ -286,7 +284,7 @@
                     <div class="about-philosophy">
                         <h3>My Philosophy</h3>
                         <blockquote>
-                            "Every client deserves personalized attention, honest communication, and aggressive 
+                            "Every client deserves personalised attention, honest communication, and aggressive 
                             representation. I believe in fighting tirelessly for justice while treating each 
                             case with the importance it deserves."
                         </blockquote>
@@ -300,10 +298,10 @@
 
                 <div class="about-image">
                     <div class="image-wrapper">
-                        <img src="images/3.jpeg" alt="John Mitchell - Attorney at Law" />
+                        <img src="images/3.jpeg" alt="Adv Parmeshwar D. Pawar- divorce lawyer in pune" />
                         <div class="image-overlay">
                             <div class="overlay-content">
-                                <h4>Adv Parmeshwar </h4>
+                                <h4>Adv Parmeshwar D. Pawar </h4>
                                 <p>Best Divorce Lawyer</p>
                             </div>
                         </div>
