--- a/Pawar/index.html
+++ b/Pawar/index.html
@@ -7,9 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 
-    <style>
-  
-    </style>
+ <meta name="google-site-verification" content="KDyKUN7jqM8ms3M4tcL6tl2pZIl5PIIWs2vdL0teH9s" />
 </head>
 <body>
     <!-- Navigation -->
