--- a/Pawar/index.html
+++ b/Pawar/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adv Parmeshwar D. Pawar-Best Divorce Lawyer in Pune</title>
+      <link rel="canonical" href="https://www.advparmeshwardpawar.com/">
+
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 
