--- a/Pawar/index.html
+++ b/Pawar/index.html
@@ -15,7 +15,7 @@
     <!-- Navigation -->
      <div class="overlay" id="entryPopup">
     <div class="popup">
-      <h2 style="color: blue; text-decoration: underline; font-size:3rem">Disclaimer</h2>
+      <h2 style="color: blue; text-decoration: underline; font-size:3rem">Disclaimer-</h2>
         <br>
       <p>I/We hereby completely accept that, the information provided on this website is intended solely for informational, knowledge and educational purposes. I/We further accepts that, the creators or owners of the website are not constituting or has no intention to constitute any kind of marketing, solicitation, inducement, advertisement or invitation, which will constitute any kind of Lawyer-Client relationship. I/We further accept that, I/We cannot use any contents of the website for reference before any Court. I/We read and understood the abovementioned disclaimer completely and acknowledge, undertake, accept the contents of the above disclaimer before entering into website.
 
