--- a/Pawar/index.html
+++ b/Pawar/index.html
@@ -210,7 +210,7 @@ Expert in matrimonial cases and highly experienced in consultations and the requ
         </div>
          <div class="gallery">
            <img src="images/2.jpeg" alt="">
-           <img src="images/Adv Parmeshwar D. Pawar 4.jpg" alt="">
+           <img src="images/Adv Parmeshwar D. Pawar.jpg" alt="">
            <img src="images/4.jpeg" alt="">
            <img src="images/5.jpeg" alt="">
            <img src="images/6.jpeg" alt="">
