--- a/Pawar/index.html
+++ b/Pawar/index.html
@@ -216,7 +216,7 @@ Expert in matrimonial cases and highly experienced in consultations and the requ
            <img src="images/6.jpeg" alt="">
            <img src="images/7.jpeg" alt="">
            <img src="images/3.jpeg" alt="">
-           <img src="images/Adv Parmeshwar D. Pawar 7.jpg" alt="">
+           <img src="images/Adv Parmeshwar D. Pawar min.jpg" alt="">
          </div>
       </div>
    </div>
