--- a/Pawar/index.html
+++ b/Pawar/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -22,8 +22,8 @@
 
 </p>
       <div class="popup-buttons">
-        <button class="btn-yes" onclick="enterWebsite()">Yes</button>
-        <button class="btn-no" onclick="exitWebsite()">No</button>
+        <button class="btn-yes" onclick="enterWebsite()">Proceed</button>
+<!--         <button class="btn-no" onclick="exitWebsite()">No</button> -->
       </div>
     </div>
   </div>
