--- a/Pawar/Best-Divorce-Lawyer-in-Pune.html
+++ b/Pawar/Best-Divorce-Lawyer-in-Pune.html
@@ -4,28 +4,24 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Best Divorce Lawyer in Pune</title>
-    <meta
-      name="description"
-      content="Discover how minimal UI and microcopy improve reader trust and engagement in modern web design."
-    />
-    <meta
-      name="keywords"
-      content="Minimal UI, Microcopy, Web Design, Reader Trust, Engagement, UX, UI"
-    />
-    <meta name="author" content="Ritika Sharma" />
+    <meta name="description" content="Looking for the best divorce lawyer in Pune? Get expert legal guidance for mutual consent and contested divorces. Confidential consultation, fair representation, and complete support every step of the way." />
+
+    <meta name="keywords" content="Best divorce lawyer in Pune, divorce advocate Pune, mutual consent divorce Pune, contested divorce lawyer Pune, family court lawyer Pune, legal separation Pune, top divorce lawyer Pune, best advocate for divorce in Pune" />
+
+    <meta name="author" content="Adv. Parmeshwar D. Pawar" />
     <meta
       property="og:title"
-      content="Minimal UI & Microcopy in Web Design: Boosting Reader Trust and Engagement"
+      content="Best Divorce Lawyer in Pune"
     />
     <meta
       property="og:description"
-      content="Discover how minimal UI and microcopy improve reader trust and engagement in modern web design."
+      content="Looking for the best divorce lawyer in Pune? Get expert legal guidance for mutual consent and contested divorces. Confidential consultation, fair representation, and complete support every step of the way."
     />
     <meta
       property="og:image"
       content="https://images.unsplash.com/photo-1522202176988-66273c2fd55f"
     />
-    <meta property="og:url" content="https://yourblog.com/post-url" />
+    <meta property="og:url" content="https://www.advparmeshwardpawar.com/Best-Divorce-Lawyer-in-Pune.html" />
     <meta property="og:type" content="article" />
     <meta name="twitter:card" content="summary_large_image" />
     <link
@@ -36,7 +32,7 @@
   </head>
   <body>
 <nav class="navbar">
-  <div class="logo">Adv Parmeshwar D Pawar</div>
+  <div class="logo">Adv. Parmeshwar D. Pawar</div>
   <div class="menu-toggle" id="menu-toggle">
     <span></span>
     <span></span>
@@ -65,7 +61,7 @@
 
     <div class="container">
       <img
-        src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f"
+        src="Blog Image/best divorce lawyer in pune-min.jpg"
         alt="Feature Image"
         class="feature-image"
       />
