--- a/Pawar/Best-Divorce-Lawyer-in-Pune.html
+++ b/Pawar/Best-Divorce-Lawyer-in-Pune.html
@@ -19,7 +19,7 @@
     />
     <meta
       property="og:image"
-      content="https://images.unsplash.com/photo-1522202176988-66273c2fd55f"
+      content="https://www.advparmeshwardpawar.com/Blog%20Image/best%20divorce%20lawyer%20in%20pune-min.jpg"
     />
     <meta property="og:url" content="https://www.advparmeshwardpawar.com/Best-Divorce-Lawyer-in-Pune.html" />
     <meta property="og:type" content="article" />
