--- a/Pawar/Best-Divorce-Lawyer-in-Pune.html
+++ b/Pawar/Best-Divorce-Lawyer-in-Pune.html
@@ -19,7 +19,7 @@
     />
     <meta
       property="og:image"
-      content="https://www.advparmeshwardpawar.com/Blog%20Image/best%20divorce%20lawyer%20in%20pune-min.jpg"
+      content="https://images.unsplash.com/photo-1522202176988-66273c2fd55f"
     />
     <meta property="og:url" content="https://www.advparmeshwardpawar.com/Best-Divorce-Lawyer-in-Pune.html" />
     <meta property="og:type" content="article" />
@@ -144,7 +144,7 @@
             <!-- Primary: schedule (change href to your booking/contact page) -->
             <a
               class="btn btn-primary"
-              href="/contact#book"
+              href="https://wa.me/+919421861640"
               title="Schedule consultation"
             >
               <!-- calendar icon -->
@@ -167,7 +167,7 @@
             <!-- Secondary: call now (replace tel: number) -->
             <a
               class="btn btn-secondary"
-              href="tel:+911234567890"
+              href="tel:+919421861640"
               title="Call now"
             >
               <!-- phone icon -->
@@ -416,8 +416,8 @@
         As the <strong>best divorce lawyer in Pune</strong>, we’re here to ensure fairness, dignity, and peace of mind throughout your journey.
       </p>
       <div class="cta-buttons">
-        <a href="/contact" class="cta-btn primary">📅 Book Consultation</a>
-        <a href="tel:+911234567890" class="cta-btn secondary">📞 Call Now</a>
+        <a href="https://wa.me/+919421861640" class="cta-btn primary">📅 Book Consultation</a>
+        <a href="tel:919421861640" class="cta-btn secondary">📞 Call Now</a>
       </div>
     </div>
   </section>
@@ -444,10 +444,10 @@
     <!-- CTA SECTION: paste into your blog HTML -->
 
     <footer>
-      <a href="tel:+911234567890" class="footer-btn call"
+      <a href="tel:+919421861640" class="footer-btn call"
         ><i class="fas fa-phone"></i>Call</a
       >
-      <a href="#" class="footer-btn chat"
+      <a href="https://wa.me/+919421861640" class="footer-btn chat"
         ><i class="fas fa-comments"></i>Chat</a
       >
     </footer>
