--- a/Pawar/blogs/Best-Divorce-Lawyer-in-Pune.html
+++ b/Pawar/blogs/Best-Divorce-Lawyer-in-Pune.html
@@ -28,7 +28,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="blog.css" />
+    <link rel="stylesheet" href="/blog.css" />
   </head>
   <body>
 <nav class="navbar">
@@ -61,7 +61,7 @@
 
     <div class="container">
       <img
-        src="Blog Image/best divorce lawyer in pune-min.jpg"
+        src="/Blog Image/best divorce lawyer in pune-min.jpg"
         alt="Feature Image"
         class="feature-image"
       />
