--- a/Pawar/index.html
+++ b/Pawar/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adv Parmeshwar D. Pawar-Best Divorce Lawyer in Pune</title>
+    <title>Best Divorce Lawyer in Pune - Adv Parmeshwar D. Pawar-</title>
       <link rel="canonical" href="https://www.advparmeshwardpawar.com/">
 
     <link rel="stylesheet" href="style.css">
