--- a/Pawar/blogs/Best-Divorce-Lawyer-in-Pune.html
+++ b/Pawar/blogs/Best-Divorce-Lawyer-in-Pune.html
@@ -32,7 +32,11 @@
   </head>
   <body>
 <nav class="navbar">
-  <div class="logo">Adv. Parmeshwar D. Pawar</div>
+<div class="logo">
+  <a href="https://www.advparmeshwardpawar.com/" style="text-decoration: none; color: inherit;">
+    Adv. Parmeshwar D. Pawar
+  </a>
+</div>
   <div class="menu-toggle" id="menu-toggle">
     <span></span>
     <span></span>
