--- a/Pawar/index.html
+++ b/Pawar/index.html
@@ -687,6 +687,7 @@ Expert in matrimonial cases and highly experienced in consultations and the requ
       <li><a href="#">About</a></li>
       <li><a href="#">Services</a></li>
       <li><a href="#">Contact</a></li>
+     <li><a href="https://www.advparmeshwardpawar.com/blogs/Best-Divorce-Lawyer-in-Pune.html">Blogs</a></li>
     </ul>
 
     <div class="footer-social">
