--- a/Pawar/blogs/Best-Divorce-Lawyer-in-Pune.html
+++ b/Pawar/blogs/Best-Divorce-Lawyer-in-Pune.html
@@ -43,11 +43,11 @@
     <span></span>
   </div>
   <ul id="menu">
-    <li><a href="#">Home</a></li>
-    <li><a href="#">About</a></li>
-    <li><a href="#">Services</a></li>
-    <li><a href="#">Cases</a></li>
-    <li><a href="#">Contact</a></li>
+    <li><a href="https://www.advparmeshwardpawar.com/">Home</a></li>
+    <li><a href="https://www.advparmeshwardpawar.com/">About</a></li>
+    <li><a href="https://www.advparmeshwardpawar.com/">Services</a></li>
+    <li><a href="https://www.advparmeshwardpawar.com/blogs/Best-Divorce-Lawyer-in-Pune.html">Blogs</a></li>
+    <li><a href="https://www.advparmeshwardpawar.com/">Contact</a></li>
   </ul>
 </nav>
 
