--- a/Pawar/index.html
+++ b/Pawar/index.html
@@ -35,7 +35,7 @@
                 <li><a href="#home" class="nav-link">Home</a></li>
                 <li><a href="#about" class="nav-link">About</a></li>
                 <li><a href="#services" class="nav-link">Services</a></li>
-                <li><a href="#cases" class="nav-link">Cases</a></li>
+                <li><a href="https://www.advparmeshwardpawar.com/blogs/Best-Divorce-Lawyer-in-Pune.html" class="nav-link">Blogs</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
             <button class="menu-toggle" id="menu-toggle">☰</button>
