--- a/Pawar/blogs/Best-Divorce-Lawyer-in-Pune.html
+++ b/Pawar/blogs/Best-Divorce-Lawyer-in-Pune.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Best Divorce Lawyer in Pune</title>
+    <title>Best Divorce Lawyer in Pune -15+ years Experienced divorce lawyer</title>
     <meta name="description" content="Looking for the best divorce lawyer in Pune? Get expert legal guidance for mutual consent and contested divorces. Confidential consultation, fair representation, and complete support every step of the way." />
 
     <meta name="keywords" content="Best divorce lawyer in Pune, divorce advocate Pune, mutual consent divorce Pune, contested divorce lawyer Pune, family court lawyer Pune, legal separation Pune, top divorce lawyer Pune, best advocate for divorce in Pune" />
@@ -11,7 +11,7 @@
   
     <meta
       property="og:title"
-      content="Best Divorce Lawyer in Pune"
+      content="Best Divorce Lawyer in Pune -15+ years Experienced divorce lawyer"
     />
     <meta
       property="og:description"
@@ -19,7 +19,7 @@
     />
     <meta
       property="og:image"
-      content="https://images.unsplash.com/photo-1522202176988-66273c2fd55f"
+      content="https://www.advparmeshwardpawar.com/Blog%20Image/best%20divorce%20lawyer%20in%20pune-min.jpg"
     />
     <meta property="og:url" content="https://www.advparmeshwardpawar.com/Best-Divorce-Lawyer-in-Pune.html" />
     <meta property="og:type" content="article" />
