--- a/Pawar/blogs/Best-Divorce-Lawyer-in-Pune.html
+++ b/Pawar/blogs/Best-Divorce-Lawyer-in-Pune.html
@@ -69,7 +69,7 @@
         alt="Feature Image"
         class="feature-image"
       />
-      <h2>Best Divorce Lawyer in Pune</h2>
+      <h2>Best Divorce Lawyer in Pune - 15+ years Experienced divorce lawyer</h2>
       <div class="meta">
         Updated: Aug 11, 2025 · By <strong>Adv. Parmeshwar D. Pawar</strong>
       </div>
