--- a/Pawar/blogs/Best-Divorce-Lawyer-in-Pune.html
+++ b/Pawar/blogs/Best-Divorce-Lawyer-in-Pune.html
@@ -66,7 +66,7 @@
     <div class="container">
       <img
         src="/Blog Image/best divorce lawyer in pune-min.jpg"
-        alt="Feature Image"
+        alt="Best Divorce Lawyer in Pune"
         class="feature-image"
       />
       <h2>Best Divorce Lawyer in Pune - 15+ years Experienced divorce lawyer</h2>
