--- a/Pawar/blogs/Best-Divorce-Lawyer-in-Pune.html
+++ b/Pawar/blogs/Best-Divorce-Lawyer-in-Pune.html
@@ -279,7 +279,7 @@
         Whether you're exploring your options or ready to take action, we offer
         a full range of family law services:
       </p>
-      <h4>Mutual Consent Divorce</h4>
+      <h4>Mutual Consent Divorce Pune</h4>
       <p>
         This is the most peaceful way to end a marriage. We help both parties
         come to terms, file jointly, and resolve alimony, custody, and property
