--- a/Pawar/blogs/Best-Divorce-Lawyer-in-Pune.html
+++ b/Pawar/blogs/Best-Divorce-Lawyer-in-Pune.html
@@ -370,14 +370,14 @@
     <h2>Frequently Asked Questions (FAQs)</h2>
     
     <div class="faq-item">
-      <button class="faq-question">Q. How do I file for divorce in Pune?</button>
+      <button class="faq-question">Q1. How do I file for divorce in Pune?</button>
       <div class="faq-answer">
         <p>Start by booking a consultation. We’ll assess your situation and advise whether a mutual or contested divorce is best. Then we’ll draft and file the petition in the Pune family court.</p>
       </div>
     </div>
   
     <div class="faq-item">
-      <button class="faq-question">Q. What are the fees for a divorce lawyer in Pune?</button>
+      <button class="faq-question">Q2. What are the fees for a divorce lawyer in Pune?</button>
       <div class="faq-answer">
         <p>The fees for a divorce lawyer in Pune typically depend on the type of divorce (mutual vs contested), case complexity, duration, and the experience of the lawyer.</p>
         <ul>
@@ -389,21 +389,27 @@
     </div>
   
     <div class="faq-item">
-      <button class="faq-question">Q. Can I get a divorce without going to court?</button>
+      <button class="faq-question">Q3. Can I get a divorce without going to court?</button>
       <div class="faq-answer">
         <p>For a mutual consent divorce, court appearances are limited and sometimes not required if handled strategically. But contested cases do involve hearings.</p>
       </div>
     </div>
   
     <div class="faq-item">
-      <button class="faq-question">Q. What if my spouse is unwilling to cooperate?</button>
+      <button class="faq-question">Q4. What if my spouse is unwilling to cooperate?</button>
       <div class="faq-answer">
         <p>You can still file under grounds like cruelty, desertion, adultery, or mental disorder. We’ll guide you based on your specific situation.</p>
       </div>
     </div>
-  
+  <div class="faq-item">
+      <button class="faq-question">Q4.Divorce lawyer in Pune contact number?</button>
+      <div class="faq-answer">
+        <p>Adv. Parmeshwar D. Pawar – Expert in divorce and family law matters. 📞 +91 9421861640
+.</p>
+      </div>
+    </div>
     <div class="faq-item">
-      <button class="faq-question">Q. Will I have to pay or receive alimony?</button>
+      <button class="faq-question">Q5. Will I have to pay or receive alimony?</button>
       <div class="faq-answer">
         <p>It depends on several factors like income, lifestyle, and the duration of marriage. We help you understand your legal rights clearly.</p>
       </div>
