--- a/Pawar/index.html
+++ b/Pawar/index.html
@@ -102,7 +102,7 @@
                 </div>
             </div>
             <div class="cta-image">
-                <img src="images/ss.jpeg" height="110%"  alt="Legal Consultation" />
+                <img src="images/ss.jpeg" height="110%"  alt="Adv-Parmeshwar-D-Pawar" />
             </div>
         </div>
     </section>
@@ -213,14 +213,14 @@ Expert in matrimonial cases and highly experienced in consultations and the requ
          <h1>My Office</h1>
         </div>
          <div class="gallery">
-           <img src="images/2.jpeg" alt="">
-           <img src="images/Adv Parmeshwar D. Pawar.jpg" alt="">
-           <img src="images/4.jpeg" alt="">
-           <img src="images/5.jpeg" alt="">
-           <img src="images/6.jpeg" alt="">
-           <img src="images/7.jpeg" alt="">
-           <img src="images/3.jpeg" alt="">
-           <img src="images/Adv Parmeshwar D. Pawar min.jpg" alt="">
+           <img src="images/2.jpeg" alt="divorce-lawyer-in-pune-office">
+           <img src="images/Adv Parmeshwar D. Pawar.jpg" alt="divorce-lawyer-in-pune-Adv Parmeshwar D. Pawar">
+           <img src="images/4.jpeg" alt="divorce-lawyer-in-pune-office">
+           <img src="images/5.jpeg" alt="divorce-lawyer-in-pune-office">
+           <img src="images/6.jpeg" alt="divorce-lawyer-in-pune-office">
+           <img src="images/7.jpeg" alt="divorce-lawyer-in-pune-office">
+           <img src="images/3.jpeg" alt="divorce-lawyer-in-pune-office">
+           <img src="images/Adv Parmeshwar D. Pawar min.jpg" alt="Adv Parmeshwar D. Pawar pune">
          </div>
       </div>
    </div>
@@ -289,7 +289,7 @@ Expert in matrimonial cases and highly experienced in consultations and the requ
 
                 <div class="about-image">
                     <div class="image-wrapper">
-                        <img src="images/3.jpeg" alt="Adv Parmeshwar D. Pawar- divorce lawyer in pune" />
+                        <img src="images/3.jpeg" alt="Adv-Parmeshwar-D-Pawar- divorce-lawyer-in-pune" />
                         <div class="image-overlay">
                             <div class="overlay-content">
                                 <h4>Adv Parmeshwar D. Pawar </h4>
@@ -629,10 +629,10 @@ Expert in matrimonial cases and highly experienced in consultations and the requ
 
     <div class="bip-slider-container">
       <div class="bip-slider-track" id="bipSliderTrack">
-        <div class="bip-slide"><img src="images/testimonial/s1.png" alt="1"></div>
-        <div class="bip-slide"><img src="images/testimonial/s2.png" alt="1"></div>
-        <div class="bip-slide"><img src="images/testimonial/s3.png" alt="1"></div>
-        <div class="bip-slide"><img src="images/testimonial/s4.png" alt="1"></div>
+        <div class="bip-slide"><img src="images/testimonial/s1.png" alt="Adv-Parmeshwar-D-Pawar-client-testimonials"></div>
+        <div class="bip-slide"><img src="images/testimonial/s2.png" alt="Adv-Parmeshwar-D-Pawar-client-testimonials"></div>
+        <div class="bip-slide"><img src="images/testimonial/s3.png" alt="Adv-Parmeshwar-D-Pawar-client-testimonials"></div>
+        <div class="bip-slide"><img src="images/testimonial/s4.png" alt="Adv-Parmeshwar-D-Pawar-client-testimonials"></div>
   
 
       
