--- a/Pawar/blogs/Best-Divorce-Lawyer-in-Pune.html
+++ b/Pawar/blogs/Best-Divorce-Lawyer-in-Pune.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Best Divorce Lawyer in Pune -15+ years Experienced divorce lawyer</title>
-    <meta name="description" content="Looking for the best divorce lawyer in Pune? Get expert legal guidance for mutual consent and contested divorces. Confidential consultation, fair representation, and complete support every step of the way." />
+    <title>Best Divorce Lawyer in Pune | Trusted Family Law Expert</title>
+    <meta name="description" content="Need the best divorce lawyer in Pune? Adv. Parmeshwar D. Pawar offers trusted legal support for divorce, alimony, and family law matters." />
 
     <meta name="keywords" content="Best divorce lawyer in Pune, divorce advocate Pune, mutual consent divorce Pune, contested divorce lawyer Pune, family court lawyer Pune, legal separation Pune, top divorce lawyer Pune, best advocate for divorce in Pune" />
 
@@ -87,7 +87,7 @@
         representation — we offer a trusted hand to guide you through one of
         life’s most difficult transitions.
       </p>
-      <h3>Why You Need a Divorce Lawyer — And Not Just Any Lawyer</h3>
+      <h3>Why Choosing a Specialized Divorce Lawyer Matters</h3>
       <p>
         Divorce law in India, especially under acts like the Hindu Marriage Act,
         the Special Marriage Act, and others, is nuanced and emotionally
@@ -104,7 +104,7 @@
         We’re not just here to win cases. We’re here to protect your peace of
         mind, your children’s future, and your legal rights.
       </p>
-      <h2>Meet the Best Divorce Lawyer in Pune – Your Legal Ally</h2>
+      <h2>Introducing Your Trusted Divorce Lawyer in Pune</h2>
       <h4>Who I Am</h4>
       <p>
         I’m Adv. Parmeshwar D. Pawar, a Pune-based divorce and family law
@@ -136,7 +136,7 @@
       <section class="cta-section">
         <div class="cta-inner">
           <div class="cta-content">
-            <h2 class="cta-title">Schedule a Consultation Today</h2>
+            <h2 class="cta-title">Book Your Consultation Today</h2>
             <p class="cta-sub">Your first step toward peace of mind.</p>
           </div>
 
@@ -165,7 +165,7 @@
                   d="M7 2v2H5a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2h-2V2h-2v2H9V2H7zm12 8H5V6h14v4z"
                 />
               </svg>
-              <span>Schedule Consultation</span>
+              <span>Our Approach to Divorce Representation</span>
             </a>
 
             <!-- Secondary: call now (replace tel: number) -->
@@ -195,7 +195,9 @@
 
       <!-- Features list (black theme) -->
       <section class="features-section" aria-label="Consultation features">
-        <h2>Our Approach</h2>
+        <h2>Our Approach to Divorce Representation
+
+</h2>
         <ul class="features-list">
           <li>
             <svg
@@ -274,7 +276,8 @@
         </ul>
       </section>
 
-      <h3>Our Divorce Legal Services in Pune</h3>
+      <h3>Comprehensive Divorce Legal Services in Pune</h3>
+      <p>We provide end-to-end divorce and family law services tailored to your unique situation. From mutual consent divorces and contested cases to alimony, child custody, domestic violence matters, and division of assets, our expertise covers every aspect of matrimonial law. Whether you need guidance on the best course of action or strong representation in court, we are committed to delivering clear advice, strategic solutions, and compassionate support at every step of your legal journey.</p>
       <p>
         Whether you're exploring your options or ready to take action, we offer
         a full range of family law services:
