--- a/Pawar/blogs/Best-Divorce-Lawyer-in-Pune.html
+++ b/Pawar/blogs/Best-Divorce-Lawyer-in-Pune.html
@@ -395,7 +395,7 @@
     </div>
   
     <div class="faq-item">
-      <button class="faq-question">Q2. What are the fees for a divorce lawyer in Pune?</button>
+      <button class="faq-question">Q2.How much does a divorce lawyer cost in Pune?</button>
       <div class="faq-answer">
         <p>The fees for a divorce lawyer in Pune typically depend on the type of divorce (mutual vs contested), case complexity, duration, and the experience of the lawyer.</p>
         <ul>
@@ -423,6 +423,19 @@
       <button class="faq-question">Q5.Divorce lawyer in Pune contact number?</button>
       <div class="faq-answer">
         <p>Adv. Parmeshwar D. Pawar – Expert in divorce and family law matters. 📞 +91 9421861640
+.</p>
+      </div>
+     <div class="faq-item">
+      <button class="faq-question">Q5. What type of lawyer is best for divorce?</button>
+      <div class="faq-answer">
+        <p>The best type of lawyer for divorce is a specialist in family and matrimonial law. These lawyers have in-depth knowledge of divorce procedures, alimony, child custody, property division, and local court practices. A divorce lawyer with experience handling cases similar to yours can provide tailored advice, effective negotiation, and strong representation—ensuring your rights and interests are protected throughout the process.
+.</p>
+      </div>
+    </div>
+    <div class="faq-item">
+      <button class="faq-question">Q5.Who is the best divorce lawyer in Pune?</button>
+      <div class="faq-answer">
+        <p>One of the best divorce lawyers in Pune is Adv. Parmeshwar D. Pawar. With over 15 years of experience in family and matrimonial law, he has successfully represented hundreds of clients in mutual and contested divorce cases, alimony, child custody, and related matters. Known for his compassionate approach, clear communication, and strong track record in Pune’s family courts, Adv. Parmeshwar D. Pawar is a trusted choice for anyone seeking expert legal guidance during a divorce.
 .</p>
       </div>
     </div>
