--- a/Pawar/blogs/Best-Divorce-Lawyer-in-Pune.html
+++ b/Pawar/blogs/Best-Divorce-Lawyer-in-Pune.html
@@ -29,6 +29,57 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
     <link rel="stylesheet" href="/blog.css" />
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "LegalService",
+  "name": "Adv. Parmeshwar D. Pawar",
+  "image": "https://www.advparmeshwardpawar.com/images/Adv%20Parmeshwar%20D.%20Pawar.jpg",
+  "@id": "https://www.advparmeshwardpawar.com/",
+  "url": "https://www.advparmeshwardpawar.com/",
+  "description": "Adv. Parmeshwar D. Pawar — Best Divorce Lawyer in Pune. Experienced family law attorney offering divorce, child custody, alimony, legal separation & mediation. Call for a consultation.",
+  "foundingDate": "2010",
+  "telephone": "+919421861640",
+  "email": "parmeshwarp16@gmail.com",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "Office No. 115, 1st Floor, Evolet Tiara, Near Narpatgiri Chowk, 423, Mangalwar Peth",
+    "addressLocality": "Pune",
+    "addressRegion": "MH",
+    "postalCode": "411011",
+    "addressCountry": "IN"
+  },
+  "geo": {
+    "@type": "GeoCoordinates",
+    "latitude": 18.516726,
+    "longitude": 73.863150
+  },
+  "openingHoursSpecification": [{
+    "@type": "OpeningHoursSpecification",
+    "dayOfWeek": [
+      "Monday",
+      "Tuesday",
+      "Wednesday",
+      "Thursday",
+      "Friday",
+      "Saturday",
+      "Sunday"
+    ],
+    "opens": "10:00",
+    "closes": "19:00"
+  }],
+  "sameAs": [
+    "https://www.facebook.com/adv.parmeshward.pawar",
+    "https://www.youtube.com/@AdvParmeshwarDPawar"
+  ],
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": "4.9",
+    "reviewCount": "100"
+  }
+}
+</script>
+
   </head>
   <body>
 <nav class="navbar">
