--- a/Pawar/blogs/Best-Divorce-Lawyer-in-Pune.html
+++ b/Pawar/blogs/Best-Divorce-Lawyer-in-Pune.html
@@ -432,8 +432,8 @@
         <section class="modern-contact-section">
         <!-- Contact Info -->
         <div class="contact-box">
-          <h2>Get in Touch</h2>
-          <p>We're here to help. Reach out for consultations or any legal concerns. Fast, discreet, and professional service.</p>
+          <h2>Contact Us</h2>
+<p>Need legal assistance? Contact us today for a confidential consultation. We provide prompt, professional, and discreet legal services tailored to your needs.</p>
       
           <div class="contact-details">
             <p><i class="fas fa-phone"></i> +919421861640</p>
